feat: css style to profile screen medias

--- a/packages/client/src/i18next/locales/es-es/es-es.json
+++ b/packages/client/src/i18next/locales/es-es/es-es.json
@@ -1,6 +1,7 @@
 {
   "translation": {
-    "Hi, there. I`m Adriano.": "Hola. soy adriano.",
-    "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "Desarrollador de software apasionado por aprender, enseñar y colaborar. ¿Cómo puedo contribuir a su equipo?"
+    "Hi, there. I`m Adriano Monteiro.": "Hola. soy Adriano Monteiro.",
+    "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "Desarrollador de software apasionado por aprender, enseñar y colaborar. ¿Cómo puedo contribuir a su equipo?",
+    "Junior Full Stack Software Developer.": "Desarrollador Junior de Software Full Stack."
   }
 }
