--- a/packages/client/src/i18next/locales/en-us/en-us.json
+++ b/packages/client/src/i18next/locales/en-us/en-us.json
@@ -1,6 +1,7 @@
 {
   "translation": {
-    "Hi, there. I`m Adriano.": "Hi, there. I`m Adriano.",
-    "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?"
+    "Hey there. I`m Adriano Monteiro.": "Hey there. I`m Adriano Monteiro.",
+    "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?",
+    "Junior Full Stack Software Developer.": "Junior full stack software developer"
   }
 }
