fix: translations and style css settings

--- a/packages/client/src/i18next/locales/ko-kr/ko-kr.json
+++ b/packages/client/src/i18next/locales/ko-kr/ko-kr.json
@@ -1,6 +1,6 @@
 {
   "translation": {
-    "Hi, there. I`m Adriano Monteiro.": "안녕하세요. 저는 Adriano Monteiro 입니다.",
+    "Hey there. I`m Adriano Monteiro.": "안녕하세요. Adriano Monteiro 입니다.",
     "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "학습, 교육 및 협업에 열정적인 소프트웨어 개발자. 팀에 어떻게 기여할 수 있습니까?",
     "Junior Full Stack Software Developer.": "주니어 풀 스택 소프트웨어 개발자."
   }
