feat: implement menu text translate

--- a/packages/client/src/i18next/locales/es-es/es-es.json
+++ b/packages/client/src/i18next/locales/es-es/es-es.json
@@ -2,6 +2,10 @@
   "translation": {
     "Hey there. I`m Adriano Monteiro.": "Hola. soy Adriano Monteiro.",
     "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "Desarrollador de software apasionado por aprender, enseñar y colaborar. ¿Cómo puedo contribuir a su equipo?",
-    "Junior Full Stack Software Developer.": "Desarrollador Junior de Software Full Stack."
+    "Junior Full Stack Software Developer.": "Desarrollador Junior de Software Full Stack.",
+    "Home": "Comienzo",
+    "About": "Sobre",
+    "Projects": "Proyectos",
+    "Contacts": "Contactos"
   }
 }
