--- a/packages/client/src/i18next/locales/en-us/en-us.json
+++ b/packages/client/src/i18next/locales/en-us/en-us.json
@@ -2,6 +2,10 @@
   "translation": {
     "Hey there. I`m Adriano Monteiro.": "Hey there. I`m Adriano Monteiro.",
     "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?",
-    "Junior Full Stack Software Developer.": "Junior full stack software developer"
+    "Junior Full Stack Software Developer.": "Junior full stack software developer",
+    "Home": "Home",
+    "About": "About",
+    "Projects": "Projects",
+    "Contacts": "Contacts"
   }
 }
