--- a/packages/client/src/i18next/locales/pt-br/pt-br.json
+++ b/packages/client/src/i18next/locales/pt-br/pt-br.json
@@ -2,6 +2,10 @@
   "translation": {
     "Hey there. I`m Adriano Monteiro.": "Oi, Eu sou o Adriano Monteiro.",
     "A software developer passionate about learning, teaching and collaborating. How can I contribute to your team?": "Um desenvolvedor de software apaixonado por aprender, ensinar e colaborar. Como posso contribuir com seu time?",
-    "Junior Full Stack Software Developer.": "Desenvolvedor de Software Full Stack Júnior."
+    "Junior Full Stack Software Developer.": "Desenvolvedor de Software Full Stack Júnior.",
+    "Home": "Início",
+    "About": "Sobre",
+    "Projects": "Projetos",
+    "Contacts": "Contatos"
   }
 }
