feat: implement mult theme using styled components

--- a/packages/client/src/i18next/locales/en-us/en-us.json
+++ b/packages/client/src/i18next/locales/en-us/en-us.json
@@ -6,6 +6,8 @@
     "Home": "Home",
     "About": "About",
     "Projects": "Projects",
-    "Contacts": "Contacts"
+    "Contacts": "Contacts",
+    "Light Theme": "☀️ Light Theme",
+    "Dark Theme": "🌙 Dark Theme"
   }
 }
