--- a/packages/client/src/i18next/locales/es-es/es-es.json
+++ b/packages/client/src/i18next/locales/es-es/es-es.json
@@ -6,6 +6,8 @@
     "Home": "Comienzo",
     "About": "Sobre",
     "Projects": "Proyectos",
-    "Contacts": "Contactos"
+    "Contacts": "Contactos",
+    "Light Theme": "☀️ Light Theme",
+    "Dark Theme": "🌙 Dark Theme"
   }
 }
