--- a/packages/client/src/i18next/locales/pt-br/pt-br.json
+++ b/packages/client/src/i18next/locales/pt-br/pt-br.json
@@ -6,6 +6,8 @@
     "Home": "Início",
     "About": "Sobre",
     "Projects": "Projetos",
-    "Contacts": "Contatos"
+    "Contacts": "Contatos",
+    "Light Theme": "☀️ Light Theme",
+    "Dark Theme": "🌙 Dark Theme"
   }
 }
