fix: light and dark mode button style css settings

--- a/packages/client/src/i18next/locales/en-us/en-us.json
+++ b/packages/client/src/i18next/locales/en-us/en-us.json
@@ -7,7 +7,6 @@
     "About": "About",
     "Projects": "Projects",
     "Contacts": "Contacts",
-    "Light Theme": "☀️ Light Theme",
-    "Dark Theme": "🌙 Dark Theme"
+    "Light & Dark Mode": "Light & Dark Mode"
   }
 }
