--- a/packages/client/src/i18next/locales/es-es/es-es.json
+++ b/packages/client/src/i18next/locales/es-es/es-es.json
@@ -7,7 +7,6 @@
     "About": "Sobre",
     "Projects": "Proyectos",
     "Contacts": "Contactos",
-    "Light Theme": "☀️ Light Theme",
-    "Dark Theme": "🌙 Dark Theme"
+    "Light & Dark Mode": "Light & Dark Mode"
   }
 }
