--- a/packages/client/src/i18next/locales/ko-kr/ko-kr.json
+++ b/packages/client/src/i18next/locales/ko-kr/ko-kr.json
@@ -7,7 +7,6 @@
     "About": "나에 대해서",
     "Projects": "프로젝트",
     "Contacts": "연락하다",
-    "Light Theme": "☀️ Light Theme",
-    "Dark Theme": "🌙 Dark Theme"
+    "Light & Dark Mode": "Light & Dark Mode"
   }
 }
