--- a/packages/client/src/i18next/locales/pt-br/pt-br.json
+++ b/packages/client/src/i18next/locales/pt-br/pt-br.json
@@ -7,7 +7,6 @@
     "About": "Sobre",
     "Projects": "Projetos",
     "Contacts": "Contatos",
-    "Light Theme": "☀️ Light Theme",
-    "Dark Theme": "🌙 Dark Theme"
+    "Light & Dark Mode": "Light & Dark Mode"
   }
 }
